force-app/main/default/objects/Account/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <label>Buyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>