force-app/main/default/objects/Account/fields/External_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_ID__c</fullName>
    <label>External Lead ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>