force-app/main/default/objects/Account/fields/Fbclid__c.field-meta.xml
<CustomField>
    <fullName>Fbclid__c</fullName>
    <label>Fbclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>