force-app/main/default/objects/Account/fields/Gclid__c.field-meta.xml
<CustomField>
    <fullName>Gclid__c</fullName>
    <label>Gclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>