force-app/main/default/objects/Account/fields/Jornaya_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Jornaya_Lead_ID__c</fullName>
    <label>Jornaya Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>