force-app/main/default/objects/Account/fields/Lead_Prosper_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Prosper_Status__c</fullName>
    <label>Lead Prosper Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected by filter: first_name is invalid!</fullName>
            </value>
            <value>
                <fullName>Rejected by filter: last_name is invalid!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>