force-app/main/default/objects/Account/fields/Preferred_Communication_Channels__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Channels__c</fullName>
    <label>Preferred Communication Channels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>