force-app/main/default/objects/Account/fields/Source_did__c.field-meta.xml
<CustomField>
    <fullName>Source_did__c</fullName>
    <label>Source did</label>
    <length>255</length>
    <type>Text</type>
</CustomField>