force-app/main/default/objects/Account/fields/Source_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Source_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>