force-app/main/default/objects/Account/fields/Subid_2__c.field-meta.xml
<CustomField>
    <fullName>Subid_2__c</fullName>
    <label>Subid 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>