force-app/main/default/objects/Account/fields/Subid_3__c.field-meta.xml
<CustomField>
    <fullName>Subid_3__c</fullName>
    <label>Subid 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>