force-app/main/default/objects/Account/fields/TrustedForm_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>TrustedForm_Lead_ID__c</fullName>
    <label>TrustedForm Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>